do some changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="home.css">
 </head>
 
-<body id="body">
+<body id="form body">
    
     <div id="form">
     <h1 id="login">Login</h1>
@@ -28,7 +28,7 @@
         <input type="text" name="zname" id="zcode"  placeholder="Type Zipcode here"> <br>
         <p id="third"></p>
 
-        <label for="xname">phone number</label> <br>
+        <label for="xname">Phone number</label> <br>
         <input type="text" name="xname" id="phone"  placeholder="Type phoneno here"> <br>
         <p id="fourth"></p>
 
